Closed Bug 1553818 Opened 6 years ago Closed 6 years ago

Some sites such as https://forums.overclockers.co.uk/ seem to have blurrier fonts

Categories

(Core :: Graphics: Text, defect, P1)

All
Windows
defect

Tracking

()

VERIFIED FIXED
mozilla70
Tracking Status
firefox-esr60 --- disabled
firefox-esr68 --- disabled
firefox67 --- wontfix
firefox68 --- wontfix
firefox69 --- verified
firefox70 --- verified

People

(Reporter: jan, Assigned: lsalzman)

References

(Blocks 1 open bug, Regression, )

Details

(Keywords: nightly-community, regression)

Attachments

(5 files)

Attached image Screenshot.png

https://www.reddit.com/r/firefox/comments/bs0duk/anyone_else_with_wr_enabled_noticed_text_looks/

So I've enabled WR and I'm really loving it, the difference on heavier sites is very noticeable. However, I noticed some sites such as OcUK Forums seems to have blurrier fonts with WR enabled (WR off above, WR on below): https://i.imgur.com/E8Pt313.png

Turning WR off makes the text clear again. This does not happen to every site, all other sites I visit, fonts looks completely fine. It's just this website that for some reason I've noticed it.

Confirmed with 67 and 69 on Win10, GTX1060.

Blocks: wr-69
Priority: -- → P3

Hi, just wanted to add that was my Reddit/OcUK post, so to add more detail this is with FF 67 release with W10, GTX1080 Ti. I've also confirmed it with another PC using W10, AMD 5670.

Hey Lee - can you take a look at this please?

Flags: needinfo?(lsalzman)

If you disable WebRender, and you disable Direct2D as well so there is no HWA, what does it look like?

Flags: needinfo?(lsalzman) → needinfo?(jan)
Attached image basic,wr,d3d11.png
Flags: needinfo?(jan)
Summary: Some sites such as https://forums.overclockers.co.uk/ seems to have blurrier fonts → Some sites such as https://forums.overclockers.co.uk/ seem to have blurrier fonts

It seems like the result is consistent with what Skia rendering is giving us. Can you please also add in the about:support for the d3d11 case? I am also curious what the result looks like in Chromium, maybe closer to the Skia case?

Flags: needinfo?(jan)

(Win10 1809, GTX1060, 2560x1440, Dell UltraSharp U2515H (117.5 DPI))

Flags: needinfo?(jan)

Lee - any new ideas here?

Flags: needinfo?(lsalzman)

The font used is Verdana, which gets forced to use GDI rendering. In bug 1323587, Mason hard-coded the gamma to 2.3 for GDI fonts, based on a reading of Skia's code at https://searchfox.org/mozilla-central/source/gfx/skia/skia/src/ports/SkFontHost_win.cpp#1079. However, it turns out that we rather need to use the ClearType value in the code nearby, which is a much lower gamma value by default, and in any case is a system parameter.

It turns out that our Skia and WebRender rendering of GDI fonts looks far bolder than the Direct2D reference case as a result. This has been the case since bug 1323587.

I have a fix in progress...

Flags: needinfo?(lsalzman)
Component: Graphics: WebRender → Graphics: Text
Priority: P3 → P1
Assignee: nobody → lsalzman
Status: NEW → ASSIGNED
OS: Windows 10 → Windows
Regressed by: 1323587
Hardware: x86_64 → All
Pushed by lsalzman@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/f03d8ccb0864 use GDI ClearType contrast for GDI font gamma. r=jrmuizel
Status: ASSIGNED → RESOLVED
Closed: 6 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla70
Status: RESOLVED → VERIFIED
Has Regression Range: --- → yes
Has STR: --- → yes
Keywords: regression

Comment on attachment 9080168 [details]
Bug 1553818 - use GDI ClearType contrast for GDI font gamma. r?jrmuizel

Beta/Release Uplift Approval Request

  • User impact if declined: Windows users will see GDI fonts with incorrect gamma when using WebRender or Skia, that looks noticeably different than our normal output with the Direct2D backend.
  • Is this code covered by automated tests?: Yes
  • Has the fix been verified in Nightly?: Yes
  • Needs manual test from QE?: No
  • If yes, steps to reproduce:
  • List of other uplifts needed: bug 1568841
  • Risk to taking this patch: Low
  • Why is the change risky/not risky? (and alternatives if risky): GDI fonts under WebRender and Skia now more closely match the rendering output with our Direct2D backend.
  • String changes made/needed:
Attachment #9080168 - Flags: approval-mozilla-beta?

Comment on attachment 9080168 [details]
Bug 1553818 - use GDI ClearType contrast for GDI font gamma. r?jrmuizel

Fixes a regression in font rendering for some Windows users with WebRender enabled. Approved for 69.0b9.

Attachment #9080168 - Flags: approval-mozilla-beta? → approval-mozilla-beta+
Flags: qe-verify+
QA Contact: daniel.cicas
QA Whiteboard: [qa-triaged]

Hello,

I can confirm that this issue is fixed on Fx 69.0b9 and Fx 70.0a1 BuildID: 20190731215544. I verified using Windows 10 x64 1050 GTX.

Regressions: 1578791
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: