Bug 1553818 - use GDI ClearType contrast for GDI font gamma. r=jrmuizel

Differential Revision: https://phabricator.services.mozilla.com/D39101